# boludo-translator

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  Dockerfile  IMPLEMENTATION_PLAN.md  README.md  TODO.md  app.py  chainlit.md  config.py  current_app_config.json  icon.py  main.py  phrases.csv  pyproject.toml  render.yaml  requirements.txt  run_dev.sh  translator.py
.github/workflows/: ci.yaml
chroma_db/37b25afa-afb7-46b3-831a-553029b46092/: index_metadata.pickle
core/: data_loader.py  exceptions.py  prompt_manager.py  text_utils.py  translator.py  ventureout_loader.py
data/: phrases.csv  ventureout_data.jsonl
data_scripts/: INTEGRATION_SUMMARY.md  README.md  config.py  embed_data.py  exceptions.py  integration_steps.md  requirements.txt  scrape_ventureout.py  test_cleaning.py
loaders/: __init__.py  csv_loader.py
prompts/: manager.py  system.md  translation.md
public/: theme.json
realtime/: __init__.py
scripts/: enrich_data.py
services/: translation_service.py
