[project]
name = "arg-translator"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Maciej Janowski", email = "maciej.janowski1@icloud.com"},
]
dependencies = ["chainlit>=2.4.400", "fastapi>=0.115.12", "langchain-openai>=0.3.11", "langchain>=0.3.21", "langchain-community>=0.3.20", "faiss-cpu>=1.10.0", "pydantic-settings>=2.8.1", "emoji>=2.14.1", "cairosvg>=2.7.1", "Pillow>=11.1.0"]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
