[project]
name = "che-gpt"
version = "0.1.0"
description = "ChéGpt - Argentinian Spanish Translator"
authors = [
    {name = "Maciej Janowski", email = "maciej.janowski1@icloud.com"},
]
dependencies = [
    "chainlit>=2.4.400", 
    "faiss-cpu>=1.10.0", 
    "pydantic-settings>=2.8.1", 
    "emoji>=2.14.1", 
    "cairosvg>=2.7.1", 
    "Pillow>=11.1.0", 
    "langdetect>=1.0.9", 
    "pandas>=2.2.3", 
    "bs4>=0.0.2", 
    "lxml>=5.3.1", 
    "tiktoken>=0.9.0", 
    "chromadb>=1.0.0", 
    "fastapi>=0.115.9", 
    "slowapi>=0.1.9", 
    "psutil>=7.0.0", 
    "memory-profiler>=0.61.0",
    # LlamaIndex dependencies
    "llama-index>=0.10.0",
    "llama-index-llms-openai>=0.1.6",
    "llama-index-embeddings-openai>=0.1.5",
    "llama-index-vector-stores-chroma>=0.1.3",
    "llama-index-vector-stores-faiss>=0.1.3",
    "llama-index-readers-file>=0.1.4"
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[project.optional-dependencies]
dev = [
    "ruff>=0.11.2",
]
[tool.pdm]
distribution = false

[tool.ruff]
# Config section for Ruff.
# See https://docs.astral.sh/ruff/configuration/

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    ".pdm-build",
]

# Same as Black.
line-length = 88

# Assume Python 3.12
target-version = "py312"

[tool.ruff.lint]
# Enable Pyflakes `E` and `F` codes by default.
# E: pycodestyle errors
# W: pycodestyle warnings
# F: Pyflakes
# I: isort
# C90: mccabe complexity
# N: pep8-naming
select = ["E", "W", "F", "I", "C90", "N"]
ignore = []

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"
